--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-multi-carousel": "^2.5.5",
+    "react-responsive-carousel": "^3.2.10",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
