--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "NEC Election Spring 2021",
+      "author": "Web Dev: Raunaq Singh",
+      "section": "NEC Election",
+      "date": "April 2021",
+      "description": "Read about the candidates for UA and 2021, 2022, and 2023 Class Boards.",
+      "sponsored": false,
+      "link": "/2021/NEC/",
+      "image": "https://snworksceo.imgix.net/dpn/d06c9f9c-11a9-41cb-9fd6-05e5a83aa1dd.sized-1000x1000.JPG?",
+      "alt": "nec election"
+    },
+    {
       "title": "52 Weeks, Faces, and Stories 2021",
       "author": "Web Dev: Raunaq Singh | Design: Raunaq Singh",
       "section": "COVID",
