--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -8,7 +8,7 @@
       "description": "Read about the candidates for UA and 2021, 2022, and 2023 Class Boards.",
       "sponsored": false,
       "link": "/2021/NEC/",
-      "image": "https://snworksceo.imgix.net/dpn/d06c9f9c-11a9-41cb-9fd6-05e5a83aa1dd.sized-1000x1000.JPG?",
+      "image": "https://snworksceo.imgix.net/dpn/24007398-2064-463e-bb03-129867d0db63.sized-1000x1000.png",
       "alt": "nec election"
     },
     {
