--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-instagram-embed": "^2.0.0",
     "react-multi-carousel": "^2.6.1",
     "react-responsive-carousel": "^3.2.11",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
