--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-multi-carousel": "^2.6.1",
     "react-responsive-carousel": "^3.2.11",
     "react-reveal": "^1.2.2",
+    "sharp": "^0.29.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
