--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-json": "^2.9.0",
     "gatsby-transformer-sharp": "^2.10.0",
     "gh-pages": "^3.1.0",
+    "immer": "^9.0.7",
     "install": "^0.13.0",
     "npm": "^6.14.11",
     "prop-types": "^15.7.2",
